update one element

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
           </body>
 
-          <footer class="footer text-center">
+          <footer class="footer text-right">
             
             <h2>Made  by metasabeya ketsela</h2>
             <p>
