updated some elements

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
                   <a class="nav-link" href="About.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Experiance.html">Experiance</a>
+                  <a class="nav-link" href="Portfolio.html">portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Contact.html">Contact</a>
@@ -56,10 +56,13 @@
       <tr>
           <th>Email</th>
           <td>
-              <a href="mail to:metybuza46@gmail.com">metybuza46@gmail.com</a>
+              <a href="mail to:metybuza46@gmail">metybuza46@gmail.com</a>
             </td>
       </tr>
-      
+      <tr>
+          <th>linkdin</th>
+          <td>
+              <a href="in">linkedin.com/in/metasebeya-ketsela-68138b18b</a>
         </table>
 
     </div>
