--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
                   <a class="nav-link" href="About.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Experiance.html">Experiance</a>
+                  <a class="nav-link" href="Portfolio.html">portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Contact.html">Contact</a>
