mofified some names

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-             <a class="navbar-brand" href="#">My Portfolio</a>
+             <a class="navbar-brand" href="#">Metasabeya Ketsela</a>
             
              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                  <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
     <div class="col-6">
         <table class="table">
         <tr>
-            <th>name</th>
+            <th>Name</th>
             <td>Metasabeya Ketsela</td>
         </tr>
         <tr>
