--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
     <h1 class="display-4">About Me</h1>
     <div class="row">
         <div class="inline-block;">
-            <img class="img-fluid" src="https://media-exp1.licdn.com/dms/image/C4E03AQHz6sapg61Pmg/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=2S-w3T-KYACd7HFs4grCp0nBsUjXKDjCiyaqQcmQFzc" 
-            alt="my picture">
+            <img  src="https://media-exp1.licdn.com/dms/image/C4E03AQHz6sapg61Pmg/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=2S-w3T-KYACd7HFs4grCp0nBsUjXKDjCiyaqQcmQFzc" 
+            class="responsive" alt="my picture" >
         </div>
     
     <p class="col-7">Hello everyone, My name is Metasbeya Ketsela.I am orignally from Ethiopia.i just came to Usa in 2019.When i was in Ethiopia i have completed two degrees which is Bachlor in Accounting and finance and the  other one is Masters in Business Administration. when i was their have been working in one of the best known bank in Ethiopia which is Bank of Abyssinia.I am married but no childrens.currently i am astudent of university of denver boot camp in web development ,its completly different with my preivious experiance but i loved it.In short this is all about me ,if you need more information please visit my contact information icon.Thank you for visting my portfolio website.</p>
