--- a/image.html
+++ b/image.html
@@ -5,6 +5,7 @@
     <title>my photo</title>
 </head>
 <body>
-<img src="https://media-exp1.licdn.com/dms/image/C4E03AQHz6sapg61Pmg/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=2S-w3T-KYACd7HFs4grCp0nBsUjXKDjCiyaqQcmQFzc" alt="my picture">
+ <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHz6sapg61Pmg/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=2S-w3T-KYACd7HFs4grCp0nBsUjXKDjCiyaqQcmQFzc" 
+class="responsive" alt="my picture" >
 </body>
 </html>
