--- a/about - Copy.html
+++ b/about - Copy.html
@@ -26,7 +26,7 @@
                   <a class="nav-link" href="About.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Portfolio.html">portfolio</a>
+                  <a class="nav-link" href="portfolio.html">portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Contact.html">Contact</a>
@@ -35,53 +35,19 @@
             </div>
           </nav> 
 <div class="container">
-    <h1 class="display-4">Contact Me</h1>
-
-<div class="row">
-    <div class="col-6">
-        <table class="table">
-        <tr>
-            <th>Name</th>
-            <td>Metasabeya Ketsela</td>
-        </tr>
-        <tr>
-            <th>Address</th>
-            <td>East  yale Avenue  Denver,coloardo</td>
-        </tr>
-            <tr>
-            <th>phone</th>
-            <td>
-                <a href="tel:+1720 1111-1111">(720) 1111-1111</a>
-            </td>
-        </tr>
-      <tr>
-          <th>Email</th>
-          <td>
-              <a href="mail to:metybuza46@gmail">metybuza46@gmail.com</a>
-            </td>
-      </tr>
-      <tr>
-          <th>linkdin</th>
-          <td>
-              <a href="in">linkedin.com/in/metasebeya-ketsela-68138b18b</a>
-        </table>
-
-    </div>
-    <div class="col-6">
-     <h4>Send me a message!</h4>
-        <form action="">
-           <input placeholder="Full name" class="form-control">
-          <input  style="margin-top:20px"placeholder="Email"class="form control" >   
-          
-           <label style="margin-top:20px">Message</label>
-           <textarea class="form-control"></textarea>
+    <h1 class="display-4">About Me</h1>
+    <div class="row">
+        <div class="inline-block;">
+            <img  src="https://media-exp1.licdn.com/dms/image/C4E03AQHz6sapg61Pmg/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=2S-w3T-KYACd7HFs4grCp0nBsUjXKDjCiyaqQcmQFzc" 
+            class="responsive" alt="my picture" >
+        </div>
     
-
-     <button style="margin-top:20px" class="btn btn-primary">Send message</button>
-     </form>
+    <p class="col-7">Hello everyone, My name is Metasbeya Ketsela.I am orignally from Ethiopia.i just came to Usa in 2019.When i was in Ethiopia i have completed two degrees which is Bachlor in Accounting and finance and the  other one is Masters in Business Administration. when i was their have been working in one of the best known bank in Ethiopia which is Bank of Abyssinia.I am married but no childrens.currently i am astudent of university of denver boot camp in web development ,its completly different with my preivious experiance but i loved it.In short this is all about me ,if you need more information please visit my contact information icon.Thank you for visting my portfolio website.</p>
+      </div>  
     </div>
-</div>
-</div>
-</div>
+
 </body>
+
+
+
 </html>
