--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                  <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav ml-auto">
                      <li class="nav-item">
-                  <a class="nav-link" href="home.html">Home</a>
+                  <a class="nav-link" href="about.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="About.html">About</a>
+                  <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="Portfolio.html">portfolio</a>
